force-app/main/default/objects/Flow_Configuration_Settings__mdt/Flow_Configuration_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Flow Configuration Setting</label>
    <pluralLabel>Flow Configuration Settings</pluralLabel>
</CustomObject>