force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Account_Default_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Default_Record_Type__c</fullName>
    <label>Account Default Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>