force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Billing_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Billing_OwnerId__c</fullName>
    <label>Billing OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>