force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Case_Escalated_Requests_RT_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Escalated_Requests_RT_Id__c</fullName>
    <label>Case Escalated Requests RT Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>