force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/CS_Enrollment_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>CS_Enrollment_Owner_Id__c</fullName>
    <label>CS Enrollment Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>