force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Default_Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact_Record_Type__c</fullName>
    <label>Default Contact Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>