force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Default_Lead_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Default_Lead_OwnerId__c</fullName>
    <label>Default Lead OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>