force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/DevOps_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>DevOps_OwnerId__c</fullName>
    <label>DevOps OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>