force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/DNI_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>DNI_Owner_Id__c</fullName>
    <label>DNI Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>