force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Email_Carry_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Carry_Owner_Id__c</fullName>
    <label>Email Carry Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>