force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Enrollment_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_OwnerId__c</fullName>
    <label>Enrollment OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>