force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Hosted_Phones_Support_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Phones_Support_Queue_Id__c</fullName>
    <label>Hosted Phones Support Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>