force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Recipient_Address_List__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address_List__c</fullName>
    <label>Recipient Address List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>