force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/Task_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Activity_Type__c</fullName>
    <label>Task Activity Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>