force-app/main/default/objects/Flow_Configuration_Settings__mdt/fields/TotalCX_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>TotalCX_Queue_Id__c</fullName>
    <label>TotalCX Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>